KAFKA-19790: Treat blank scope claims as empty
Generated-by: OpenAI Codex (GPT-5)